--- a/Huang_L1.Rmd
+++ b/Huang_L1.Rmd
@@ -136,10 +136,34 @@ print(San_Bernardino_upward_sd_2010_ca <- sd(subset_data_ca$upward_mobility_rate
 print(San_Bernardino_upward_mean_2020_ca <- mean(subset_data_ca$upward_mobility_rate_2020[subset_data_ca$COUNTY_2010SVI == "San Bernardino County"]))
 print(San_Bernardino_upward_sd_2020_ca <- sd(subset_data_ca$upward_mobility_rate_2020[subset_data_ca$COUNTY_2010SVI == "San Bernardino County"]))
 
+#The mean upward mobility in 201 was 1.16 and in 2020, it was 1.16 still, which is higher than the state average of 0.89. The standard deviation in 2010 was 1.54 and in 2020 it was 1.54, which is higher than the state average of 0.89. 
+
 #2 Boxplot selected county
-ggplot() 
+subset_data_sb <- subset(merged_data, COUNTY_2010SVI == "San Bernardino County")
+
+sb_2010_box_plot <- ggplot(data = subset_data_sb,
+                        mapping = aes(x= COUNTY_2010SVI, y=upward_mobility_rate_2010,
+                                      fill = COUNTY_2010SVI)) +
+  geom_boxplot()
+print(sb_2010_box_plot)
+
+sb_2020_box_plot <- ggplot(data = subset_data_sb,
+                        mapping = aes(x= COUNTY_2010SVI, y=upward_mobility_rate_2020,
+                                      fill = COUNTY_2010SVI)) +
+  geom_boxplot()
+print(sb_2020_box_plot)
+
+#are there any outliers? Yes, San Bernardino county has a lot of outliers to the higher mobility side. 
+
+#save the boxplots
+ggsave(plot = sb_2010_box_plot, filename = "output/sb_2010_box_plot.pdf")
+ggsave(plot = sb_2020_box_plot, filename = "output/sb_2020_box_plot.pdf")
+
 
 #3 Filter challenge
+ca_above1 <- filter(subset_data_ca 
+nrow()
+
 
 #4 Reflect and extend
 #a.How is social mobility calculated?
